@@ -1,3 +1,7 @@
+=== master
+
+* Escape newlines in common logger lines (jeremyevans)
+
 === 3.89.0 (2025-02-12)
 
 * Support passing keyword arguments to mailer plugin mail/sendmail class methods (jeremyevans)
